--- a/src/hs_topview/params/waypoints.yaml
+++ b/src/hs_topview/params/waypoints.yaml
@@ -71,13 +71,13 @@ waypoints:
   - name: C
     frame_id: map
     x: 0.90
-    y: 0.45
+    y: 0.25
     z: 0.0
-    # Optional orientation:
-    # qx: 0.0
-    # qy: 0.0
-    # qz: 1.0
-    # qw: 0.0
+    Optional orientation:
+    qx: 0.0
+    qy: 0.0
+    qz: -0.7071
+    qw: 0.7071
     timeout_sec: 60.0
 
   - name: D
@@ -102,4 +102,228 @@ waypoints:
     # qy: 0.0
     # qz: 0.0
     # qw: 1.0
+    timeout_sec: 60.0
+
+# A* only settings and waypoints.
+astar_grid:
+  rows: 5
+  cols: 6
+  naming: row_col
+  connectivity: 4
+
+astar_blocked_waypoints: [R2C3, R2C5, R4C3, R4C5]
+
+astar_waypoints:
+  - name: R1C1
+    frame_id: map
+    x: 0.10
+    y: 0.00
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R1C2
+    frame_id: map
+    x: 0.40
+    y: 0.00
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R1C3
+    frame_id: map
+    x: 0.70
+    y: 0.00
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R1C4
+    frame_id: map
+    x: 1.00
+    y: 0.00
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R1C5
+    frame_id: map
+    x: 1.30
+    y: 0.00
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R1C6
+    frame_id: map
+    x: 1.60
+    y: 0.00
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R2C1
+    frame_id: map
+    x: 0.10
+    y: 0.20
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R2C2
+    frame_id: map
+    x: 0.40
+    y: 0.20
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R2C3
+    frame_id: map
+    x: 0.70
+    y: 0.20
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R2C4
+    frame_id: map
+    x: 1.00
+    y: 0.20
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R2C5
+    frame_id: map
+    x: 1.30
+    y: 0.20
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R2C6
+    frame_id: map
+    x: 1.60
+    y: 0.20
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R3C1
+    frame_id: map
+    x: 0.10
+    y: 0.40
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R3C2
+    frame_id: map
+    x: 0.40
+    y: 0.40
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R3C3
+    frame_id: map
+    x: 0.70
+    y: 0.40
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R3C4
+    frame_id: map
+    x: 1.00
+    y: 0.40
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R3C5
+    frame_id: map
+    x: 1.30
+    y: 0.40
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R3C6
+    frame_id: map
+    x: 1.60
+    y: 0.40
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R4C1
+    frame_id: map
+    x: 0.10
+    y: 0.60
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R4C2
+    frame_id: map
+    x: 0.40
+    y: 0.60
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R4C3
+    frame_id: map
+    x: 0.70
+    y: 0.60
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R4C4
+    frame_id: map
+    x: 1.00
+    y: 0.60
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R4C5
+    frame_id: map
+    x: 1.30
+    y: 0.60
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R4C6
+    frame_id: map
+    x: 1.60
+    y: 0.60
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R5C1
+    frame_id: map
+    x: 0.10
+    y: 0.80
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R5C2
+    frame_id: map
+    x: 0.40
+    y: 0.80
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R5C3
+    frame_id: map
+    x: 0.70
+    y: 0.80
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R5C4
+    frame_id: map
+    x: 1.00
+    y: 0.80
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R5C5
+    frame_id: map
+    x: 1.30
+    y: 0.80
+    z: 0.0
+    timeout_sec: 60.0
+
+  - name: R5C6
+    frame_id: map
+    x: 1.60
+    y: 0.80
+    z: 0.0
+    # qx: 0.0
+    # qy: 0.0
+    # qz: 0.7071
+    # qw: 0.7071
     timeout_sec: 60.0
