--- a/src/hs_topview/params/waypoints.yaml
+++ b/src/hs_topview/params/waypoints.yaml
@@ -4,45 +4,7 @@ stop_on_failure: true
 
 waypoints:
   # Keep `name` unique if you use selected_waypoints (e.g. selected_waypoints:=A,C).
-  # map size: 1.7x0.7
-
-
-  # - name: A
-  #   frame_id: map
-  #   x: 0.10
-  #   y: 0.45
-  #   z: 0.0
-  #   # Optional orientation:
-  #   # qx: 0.0
-  #   # qy: 0.0
-  #   # qz: 1.0
-  #   # qw: 0.0
-  #   timeout_sec: 60.0
-
-  # - name: B
-  #   frame_id: map
-  #   x: 1.60
-  #   y: 0.45
-  #   z: 0.0
-  #   # Optional orientation:
-  #   # qx: 0.0
-  #   # qy: 0.0
-  #   # qz: 1.0
-  #   # qw: 0.0
-  #   timeout_sec: 60.0
-
-  # - name: C
-  #   frame_id: map
-  #   x: 0.7
-  #   y: 0.2
-  #   z: 0.0
-  #   # Optional orientation:
-  #   # qx: 0.0
-  #   # qy: 0.0
-  #   # qz: 0.0
-  #   # qw: 1.0
-  #   timeout_sec: 60.0
-
+  # map size: 1.8x0.8
 
   - name: A
     frame_id: map
@@ -52,8 +14,8 @@ waypoints:
     # Optional orientation:
     # qx: 0.0
     # qy: 0.0
-    # qz: 1.0
-    # qw: 0.0
+    # qz: 0.0
+    # qw: 1.0
     timeout_sec: 60.0
 
   - name: B
@@ -64,8 +26,8 @@ waypoints:
     # Optional orientation:
     # qx: 0.0
     # qy: 0.0
-    # qz: 1.0
-    # qw: 0.0
+    # qz: 0.0
+    # qw: 1.0
     timeout_sec: 60.0
 
   - name: C
@@ -73,11 +35,11 @@ waypoints:
     x: 0.90
     y: 0.25
     z: 0.0
-    Optional orientation:
-    qx: 0.0
-    qy: 0.0
-    qz: -0.7071
-    qw: 0.7071
+    # Optional orientation:
+    # qx: 0.0
+    # qy: 0.0
+    # qz: -0.7071
+    # qw: 0.7071
     timeout_sec: 60.0
 
   - name: D
@@ -103,6 +65,7 @@ waypoints:
     # qz: 0.0
     # qw: 1.0
     timeout_sec: 60.0
+
 
 # A* only settings and waypoints.
 astar_grid:
